// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render ExpensesSummary with 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totaling 
      <span>
        $2.35
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <e
        className="button"
        to="/create"
      >
        Add Expense
      </e>
    </div>
  </div>
</div>
`;

exports[`Should correctly render ExpensesSummary with multiple expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        5
      </span>
       
      expenses
       totaling 
      <span>
        $2,323,454.35
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <e
        className="button"
        to="/create"
      >
        Add Expense
      </e>
    </div>
  </div>
</div>
`;
